--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,26 +8,25 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+header{
+  height: 30px;
+}
+
+button{
+  background-color: red;
+  
+}
+
+h3{
+  font-weight: bold;
+  font-size: 24px;
+}
+
+h2{
+  font-size: 18px;
+  font-weight: bold;
 }
